--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -w ../../NotX-b/server -x tsx ../../NotX-b/server/app.ts",
+    "dev": "nodemon -w ../../NotX-b/ -x tsx ../../NotX-b/app.ts",
     "start": "cross-env NODE_ENV=production tsx src/server/main.ts",
     "build": "vite build"
   },
