--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -19,12 +19,17 @@
     "vite-express": "*"
   },
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.3",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.2.16",
     "@vitejs/plugin-react": "^4.2.0",
+    "eslint": "^9.7.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.8.0",
     "nodemon": "^3.0.1",
+    "typescript-eslint": "^7.17.0",
     "vite": "^5.0.2"
   }
 }
