--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -25,10 +25,13 @@
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.2.16",
     "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^9.7.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "nodemon": "^3.0.1",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.6",
     "typescript-eslint": "^7.17.0",
     "vite": "^5.0.2"
   }
