--- a/vite-express-project/package.json
+++ b/vite-express-project/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -w ../../NotX-b/ -x tsx ../../NotX-b/app.ts",
-    "start": "cross-env NODE_ENV=production tsx src/server/main.ts",
-    "build": "vite build"
+    "dev": "vite build && vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
